--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react_ujs": "^2.6.0",
+    "reactstrap": "^8.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
